--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,1 +1,33 @@
-<p>buscar works!</p>
+<!-- autocomplete en material angular -->
+
+<!-- mostraemos el arreglo de heroes conforme la persona va escribiendo -->
+
+<div fxLayout="column">
+    <div>
+        <h1>Buscador de Heroes</h1>
+        <mat-divider></mat-divider>
+    </div>
+    <div>
+       <h3>Buscador</h3>
+       
+        <mat-form-field>
+                <mat-label>Number</mat-label>
+                <input type="text"
+                    placeholder="Pick one"
+                    aria-label="Number"
+                    matInput
+                    [(ngModel)]="termino"
+                    [matAutocomplete]="auto"
+                    (input)="buscando()">
+                <mat-autocomplete autoActiveFirstOption 
+                                  #auto="matAutocomplete"
+                                  (optionSelected)="opcionSeleccionada($event)">
+
+                    <!-- mat optuions es una especie de selected -->
+                <mat-option *ngFor="let heroe of heroes" [value]="heroe">
+                    {{heroe.superhero}}
+                </mat-option>
+                </mat-autocomplete>
+        </mat-form-field>
+    </div>
+</div>
