--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -1,2 +1,23 @@
 
-<h1>listado</h1>
+<h1>Listado de Héroes</h1>
+
+<mat-divider></mat-divider>
+<br>
+
+<!-- fxLayoutGap le da espacio a las tarjetas entre si -->
+<div fxLayout="row wrap"
+     fxLayout.xs="column"
+     fxLayoutAlign="center"
+     fxLayoutGap="20">
+    <div fxFlex="20" 
+         *ngFor="let heroe of heroes"
+         fxFlex.lg ="15"
+         fxFlex.sm="30">
+    
+    <app-heroe-tarjeta [heroe] = "heroe"></app-heroe-tarjeta>
+        
+
+    </div>
+    
+</div>
+
